--- a/src/main/resources/templates/user-data.html
+++ b/src/main/resources/templates/user-data.html
@@ -45,7 +45,9 @@
 <body>
 <div class="outer-container">
     <div class="container">
+
         <h1 class="page-header">User Data</h1>
+        <a th:href="@{/listusers}" class="btn btn-secondary">Back to List</a>
 
 
 
