--- a/src/main/resources/templates/user-data.html
+++ b/src/main/resources/templates/user-data.html
@@ -31,9 +31,11 @@
         .table th, .table td {
             border: 1px solid #dddddd;
             padding: 12px;
-            text-align: left;
+            text-align: center;
+
         }
         .table th {
+
             background-color: #f2f2f2;
         }
         .add-user-btn {
@@ -77,7 +79,7 @@
                 <th>Email</th>
                 <th>Designation</th>
                 <th>Office Number</th>
-                <th>Action</th>
+                <th style="text-align: center">Action</th>
             </tr>
             <tr th:each="contact : ${contacts}">
                 <td th:text="${contact.CId}"></td>
@@ -85,7 +87,7 @@
                 <td th:text="${contact.email}"></td>
                 <td th:text="${contact.contactDetails.designation}"></td>
                 <td th:text="${contact.contactDetails.officeNumber}"></td>
-                <td>
+                <td style="display: flex;justify-content: center;">
                     <div class="btn-container">
                         <a th:href="@{/user-data/{userId}(userId=${user.userId})}" class="btn btn-success">Manage</a>
                         <a th:href="@{/deletecontact/{CId}(CId=${contact.CId})}" class="btn btn-danger">Delete</a>
@@ -101,14 +103,14 @@
                 <th>Vehicle ID</th>
                 <th>VehicleName</th>
                 <th>VehicleType</th>
-                <th>Action</th>
+                <th class="col-md-3" style="text-align: center">Action</th>
 
             </tr>
             <tr th:each="vehicle : ${vehicles}">
                 <td th:text="${vehicle.VId}"></td>
                 <td th:text="${vehicle.vehicleName}"></td>
                 <td th:text="${vehicle.VehicleType}"></td>
-                <td>
+                <td  style="display: flex;justify-content: center;">
                     <div class="btn-container">
                         <a th:href="@{/user-data/{userId}(userId=${user.userId})}" class="btn btn-success">Manage</a>
                         <a th:href="@{/deletevehicle/{VId}(VId=${vehicle.VId})}" class="btn btn-danger">Delete</a>
